Make mocks internal.
If other projects need these mocks, they should declare them themselves.
They are not part of this project's public API.

--- a/internal/mock/BUILD.bazel
+++ b/internal/mock/BUILD.bazel
@@ -40,8 +40,8 @@ go_library(
         ":builder.go",
         ":remoteexecution.go",
     ],
-    importpath = "github.com/buildbarn/bb-storage/pkg/mock",
-    visibility = ["//visibility:public"],
+    importpath = "github.com/buildbarn/bb-storage/internal/mock",
+    visibility = ["//:__subpackages__"],
     deps = [
         "//pkg/builder:go_default_library",
         "//pkg/util:go_default_library",
