--- a/pkg/builder/BUILD.bazel
+++ b/pkg/builder/BUILD.bazel
@@ -24,7 +24,7 @@ go_test(
     srcs = ["demultiplexing_build_queue_test.go"],
     embed = [":go_default_library"],
     deps = [
-        "//pkg/mock:go_default_library",
+        "//internal/mock:go_default_library",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
         "@com_github_golang_mock//gomock:go_default_library",
         "@com_github_stretchr_testify//require:go_default_library",
