Allow bb-storage to be used as a simple build cache.
To appease Bazel in setups like these, we'll need to provide an
implementation of GetCapabilities(). This call is normally implemented
by Buildbarn's scheduler process. For simple cached, we should let
bb-storage return a simple response instead.

Add a NonExecutingBuildQueue that acts as a simple stub that only
implements GetCapabilities. Make these part of the schedulers map on
startup. Also extend the ActionCacheServer, so that we can use the set
of supported instance names to explictly whitelist write access.

--- a/pkg/builder/BUILD.bazel
+++ b/pkg/builder/BUILD.bazel
@@ -6,12 +6,14 @@ go_library(
         "build_queue.go",
         "demultiplexing_build_queue.go",
         "forwarding_build_queue.go",
+        "non_executable_build_queue.go",
     ],
     importpath = "github.com/buildbarn/bb-storage/pkg/builder",
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/util:go_default_library",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
+        "@com_github_bazelbuild_remote_apis//build/bazel/semver:go_default_library",
         "@go_googleapis//google/longrunning:longrunning_go_proto",
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_google_grpc//codes:go_default_library",
