--- a/pkg/blobstore/BUILD.bazel
+++ b/pkg/blobstore/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
         "blob_access.go",
         "content_addressable_storage_blob_access.go",
         "error_blob_access.go",
+        "grpc_metadata_forwarding_blob_access.go",
         "merkle_blob_access.go",
         "metrics_blob_access.go",
         "redis_blob_access.go",
@@ -26,6 +27,7 @@ go_library(
         "@com_github_go_redis_redis//:go_default_library",
         "@com_github_golang_protobuf//proto:go_default_library",
         "@com_github_google_uuid//:go_default_library",
+        "@com_github_grpc_ecosystem_go_grpc_middleware//util/metautils:go_default_library",
         "@com_github_prometheus_client_golang//prometheus:go_default_library",
         "@go_googleapis//google/bytestream:bytestream_go_proto",
         "@org_golang_google_grpc//:go_default_library",
