--- a/cmd/bb_storage/BUILD.bazel
+++ b/cmd/bb_storage/BUILD.bazel
@@ -14,6 +14,7 @@ go_library(
         "//pkg/cas:go_default_library",
         "//pkg/configuration:go_default_library",
         "//pkg/opencensus:go_default_library",
+        "//pkg/util:go_default_library",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
         "@com_github_grpc_ecosystem_go_grpc_prometheus//:go_default_library",
         "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
