--- a/pkg/configuration/BUILD.bazel
+++ b/pkg/configuration/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_library")
+load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "go_default_library",
@@ -8,5 +8,16 @@ go_library(
     deps = [
         "//pkg/proto/configuration/bb_storage:go_default_library",
         "@com_github_golang_protobuf//jsonpb:go_default_library_gen",
+    ],
+)
+
+go_test(
+    name = "go_default_test",
+    srcs = glob(["*_test.go"]),
+    data = glob(["testdata/**"]),
+    embed = [":go_default_library"],
+    deps = [
+        "//pkg/proto/configuration/bb_storage:go_default_library",
+        "@com_github_stretchr_testify//require:go_default_library",
     ],
 )
