--- a/pkg/blobstore/BUILD.bazel
+++ b/pkg/blobstore/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
         "blob_access.go",
         "content_addressable_storage_blob_access.go",
         "error_blob_access.go",
+        "gcs_blob_access.go",
         "merkle_blob_access.go",
         "metrics_blob_access.go",
         "redis_blob_access.go",
@@ -32,6 +33,9 @@ go_library(
         "@org_golang_google_grpc//codes:go_default_library",
         "@org_golang_google_grpc//status:go_default_library",
         "@org_golang_x_net//context/ctxhttp:go_default_library",
+        "@com_google_cloud_go//storage:go_default_library",
+        "@org_golang_x_oauth2//google:go_default_library",
+        "@org_golang_google_api//option:go_default_library",
     ],
 )
 
