--- a/cmd/bb_storage/BUILD.bazel
+++ b/cmd/bb_storage/BUILD.bazel
@@ -15,8 +15,15 @@ go_library(
         "//pkg/util:go_default_library",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
         "@com_github_grpc_ecosystem_go_grpc_prometheus//:go_default_library",
+        "@com_github_prometheus_client_golang//prometheus:go_default_library",
         "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
         "@go_googleapis//google/bytestream:bytestream_go_proto",
+        "@io_opencensus_go//plugin/ocgrpc:go_default_library",
+        "@io_opencensus_go//stats/view:go_default_library",
+        "@io_opencensus_go//trace:go_default_library",
+        "@io_opencensus_go//zpages:go_default_library",
+        "@io_opencensus_go_contrib_exporter_ocagent//:go_default_library",
+        "@io_opencensus_go_contrib_exporter_prometheus//:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_google_grpc//codes:go_default_library",
         "@org_golang_google_grpc//status:go_default_library",
