--- a/pkg/blobstore/circular/BUILD.bazel
+++ b/pkg/blobstore/circular/BUILD.bazel
@@ -21,6 +21,7 @@ go_library(
         "//pkg/blobstore:go_default_library",
         "//pkg/util:go_default_library",
         "@com_github_prometheus_client_golang//prometheus:go_default_library",
+        "@io_opencensus_go//trace:go_default_library",
         "@org_golang_google_grpc//codes:go_default_library",
         "@org_golang_google_grpc//status:go_default_library",
     ],
