--- a/pkg/blobstore/BUILD.bazel
+++ b/pkg/blobstore/BUILD.bazel
@@ -4,6 +4,7 @@ go_library(
     name = "go_default_library",
     srcs = [
         "action_cache_blob_access.go",
+        "badger_blob_access.go",
         "blob_access.go",
         "content_addressable_storage_blob_access.go",
         "error_blob_access.go",
@@ -23,11 +24,13 @@ go_library(
         "@com_github_aws_aws_sdk_go//service/s3:go_default_library",
         "@com_github_aws_aws_sdk_go//service/s3/s3manager:go_default_library",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
+        "@com_github_dgraph_io_badger//:go_default_library",
         "@com_github_go_redis_redis//:go_default_library",
         "@com_github_golang_protobuf//proto:go_default_library",
         "@com_github_google_uuid//:go_default_library",
         "@com_github_prometheus_client_golang//prometheus:go_default_library",
         "@go_googleapis//google/bytestream:bytestream_go_proto",
+        "@io_opencensus_go//trace:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_google_grpc//codes:go_default_library",
         "@org_golang_google_grpc//status:go_default_library",
