--- a/pkg/blobstore/configuration/BUILD.bazel
+++ b/pkg/blobstore/configuration/BUILD.bazel
@@ -17,6 +17,7 @@ go_library(
         "@com_github_aws_aws_sdk_go//aws/session:go_default_library",
         "@com_github_aws_aws_sdk_go//service/s3:go_default_library",
         "@com_github_aws_aws_sdk_go//service/s3/s3manager:go_default_library",
+        "@com_github_dgraph_io_badger//:go_default_library",
         "@com_github_go_redis_redis//:go_default_library",
         "@com_github_golang_protobuf//proto:go_default_library",
         "@com_github_grpc_ecosystem_go_grpc_prometheus//:go_default_library",
