Add support for memory and file based blob storage

--- a/pkg/blobstore/BUILD.bazel
+++ b/pkg/blobstore/BUILD.bazel
@@ -27,7 +27,9 @@ go_library(
         "@com_github_prometheus_client_golang//prometheus:go_default_library",
         "@dev_gocloud//blob:go_default_library",
         "@dev_gocloud//blob/azureblob:go_default_library",
+        "@dev_gocloud//blob/fileblob:go_default_library",
         "@dev_gocloud//blob/gcsblob:go_default_library",
+        "@dev_gocloud//blob/memblob:go_default_library",
         "@dev_gocloud//blob/s3blob:go_default_library",
         "@dev_gocloud//gcerrors:go_default_library",
         "@dev_gocloud//gcp:go_default_library",
