--- a/cmd/bb_storage/BUILD.bazel
+++ b/cmd/bb_storage/BUILD.bazel
@@ -1,5 +1,5 @@
 load("//tools:container.bzl", "container_push_official")
-load("@io_bazel_rules_docker//go:image.bzl", "go_image")
+load("@io_bazel_rules_docker//container:container.bzl", "container_image")
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
 
 go_library(
@@ -34,12 +34,10 @@ go_binary(
     visibility = ["//visibility:public"],
 )
 
-go_image(
+container_image(
     name = "bb_storage_container",
-    embed = [":go_default_library"],
-    goarch = "amd64",
-    goos = "linux",
-    pure = "on",
+    entrypoint = ["/bb_storage"],
+    files = [":bb_storage"],
     visibility = ["//visibility:public"],
 )
 
