--- a/pkg/blobstore/configuration/BUILD.bazel
+++ b/pkg/blobstore/configuration/BUILD.bazel
@@ -15,12 +15,18 @@ go_library(
         "@com_github_aws_aws_sdk_go//aws:go_default_library",
         "@com_github_aws_aws_sdk_go//aws/credentials:go_default_library",
         "@com_github_aws_aws_sdk_go//aws/session:go_default_library",
+        "@com_github_azure_azure_pipeline_go//pipeline:go_default_library",
         "@com_github_azure_azure_storage_blob_go//azblob:go_default_library",
         "@com_github_go_redis_redis//:go_default_library",
         "@com_github_golang_protobuf//proto:go_default_library",
         "@com_github_grpc_ecosystem_go_grpc_prometheus//:go_default_library",
         "@com_google_cloud_go//storage:go_default_library",
+        "@dev_gocloud//blob:go_default_library",
         "@dev_gocloud//blob/azureblob:go_default_library",
+        "@dev_gocloud//blob/fileblob:go_default_library",
+        "@dev_gocloud//blob/gcsblob:go_default_library",
+        "@dev_gocloud//blob/memblob:go_default_library",
+        "@dev_gocloud//blob/s3blob:go_default_library",
         "@dev_gocloud//gcp:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_google_grpc//codes:go_default_library",
