Move all configuration and flags to protobuf and jsonpb

--- a/pkg/blobstore/configuration/BUILD.bazel
+++ b/pkg/blobstore/configuration/BUILD.bazel
@@ -10,15 +10,13 @@ go_library(
         "//pkg/blobstore/circular:go_default_library",
         "//pkg/blobstore/sharding:go_default_library",
         "//pkg/filesystem:go_default_library",
-        "//pkg/proto/blobstore:go_default_library",
+        "//pkg/proto/configuration/blobstore:go_default_library",
         "//pkg/util:go_default_library",
         "@com_github_aws_aws_sdk_go//aws:go_default_library",
         "@com_github_aws_aws_sdk_go//aws/credentials:go_default_library",
         "@com_github_aws_aws_sdk_go//aws/session:go_default_library",
-        "@com_github_azure_azure_pipeline_go//pipeline:go_default_library",
         "@com_github_azure_azure_storage_blob_go//azblob:go_default_library",
         "@com_github_go_redis_redis//:go_default_library",
-        "@com_github_golang_protobuf//proto:go_default_library",
         "@com_github_grpc_ecosystem_go_grpc_prometheus//:go_default_library",
         "@com_google_cloud_go//storage:go_default_library",
         "@dev_gocloud//blob:go_default_library",
