--- a/pkg/blobstore/configuration/BUILD.bazel
+++ b/pkg/blobstore/configuration/BUILD.bazel
@@ -18,6 +18,7 @@ go_library(
         "@com_github_azure_azure_storage_blob_go//azblob:go_default_library",
         "@com_github_dgraph_io_badger//:go_default_library",
         "@com_github_go_redis_redis//:go_default_library",
+        "@com_github_golang_protobuf//proto:go_default_library",
         "@com_github_grpc_ecosystem_go_grpc_prometheus//:go_default_library",
         "@com_google_cloud_go//storage:go_default_library",
         "@dev_gocloud//blob:go_default_library",
