Add Jsonnet support
The storage daemon can now accept Jsonnet-based configuration files on
top of the existing json capability.

--- a/pkg/util/BUILD.bazel
+++ b/pkg/util/BUILD.bazel
@@ -4,12 +4,18 @@ go_library(
     name = "go_default_library",
     srcs = [
         "digest.go",
+        "jsonnet.go",
         "status.go",
     ],
     importpath = "github.com/buildbarn/bb-storage/pkg/util",
     visibility = ["//visibility:public"],
     deps = [
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
+        "@com_github_golang_protobuf//jsonpb:go_default_library_gen",
+        "@com_github_golang_protobuf//proto:go_default_library",
+        "@com_github_google_go_jsonnet//:go_default_library",
+        "@com_github_google_go_jsonnet//ast:go_default_library",
+        "@com_github_google_go_jsonnet//astgen:go_default_library",
         "@org_golang_google_grpc//codes:go_default_library",
         "@org_golang_google_grpc//status:go_default_library",
     ],
