--- a/pkg/configuration/BUILD.bazel
+++ b/pkg/configuration/BUILD.bazel
@@ -7,6 +7,6 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/proto/configuration/bb_storage:go_default_library",
-        "@com_github_golang_protobuf//jsonpb:go_default_library_gen",
+        "//pkg/util:go_default_library",
     ],
 )
