Introducing the buffer layer
The existing BlobAccess API uses io.ReadClosers to transfer object
contents. This has various disadvantages:

- It prevents us from supporting random access I/O (offset reads).
- There are various code paths that perform unnecessary conversions from
  byte slices to readers to byte slices, thereby copying the data.
- It makes it hard to provide high-level features such as retrying,
  error handling, metrics capturing, etc.

This change adds a new type called Buffer. Buffers can be created using
New{Kind}BufferFrom{Type}(). For example: NewCASBufferFromByteSlice().
The Buffer interface then provides a set of functions that allow the
buffer to be converted to the desired format. This means that if a
buffer is backed by a byte slice and ToByteSlice() is called on it, no
conversions take place whatsoever.

--- a/internal/mock/BUILD.bazel
+++ b/internal/mock/BUILD.bazel
@@ -4,10 +4,33 @@ load("@bazel_gomock//:gomock.bzl", "gomock")
 load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 gomock(
+    name = "aliases",
+    out = "aliases.go",
+    interfaces = [
+        "ReadCloser",
+        "Writer",
+    ],
+    library = "//internal/mock/aliases:go_default_library",
+    package = "mock",
+)
+
+gomock(
     name = "blobstore",
     out = "blobstore.go",
     interfaces = ["BlobAccess"],
     library = "//pkg/blobstore:go_default_library",
+    package = "mock",
+)
+
+gomock(
+    name = "buffer",
+    out = "buffer.go",
+    interfaces = [
+        "ChunkReader",
+        "ErrorHandler",
+        "RepairFunc",
+    ],
+    library = "//pkg/blobstore/buffer:go_default_library",
     package = "mock",
 )
 
@@ -55,7 +78,9 @@ gomock(
 go_library(
     name = "go_default_library",
     srcs = [
+        ":aliases.go",
         ":blobstore.go",
+        ":buffer.go",
         ":builder.go",
         ":clock.go",
         ":grpc.go",
@@ -64,6 +89,7 @@ go_library(
     importpath = "github.com/buildbarn/bb-storage/internal/mock",
     visibility = ["//:__subpackages__"],
     deps = [
+        "//pkg/blobstore/buffer:go_default_library",
         "//pkg/builder:go_default_library",
         "//pkg/clock:go_default_library",
         "//pkg/util:go_default_library",
