--- a/pkg/proto/cas/BUILD.bazel
+++ b/pkg/proto/cas/BUILD.bazel
@@ -8,7 +8,7 @@ proto_library(
     name = "cas_proto",
     srcs = ["cas.proto"],
     visibility = ["//visibility:public"],
-    deps = ["@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:remoteexecution_proto"],
+    deps = ["@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:remote_execution_proto"],
 )
 
 go_proto_library(
