Add a utility function for decimal based histogram bucket boundaries
The existing code has the downside that it eventually contains rounding
errors, meaning that the resulting bucket boundaries have long string
representations. The utility function prevents this by computing values
based on their decimal string representation.

--- a/pkg/util/BUILD.bazel
+++ b/pkg/util/BUILD.bazel
@@ -1,8 +1,9 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_library")
+load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "go_default_library",
     srcs = [
+        "buckets.go",
         "digest.go",
         "jsonnet.go",
         "status.go",
@@ -19,4 +20,11 @@ go_library(
         "@org_golang_google_grpc//codes:go_default_library",
         "@org_golang_google_grpc//status:go_default_library",
     ],
+)
+
+go_test(
+    name = "go_default_test",
+    srcs = ["buckets_test.go"],
+    embed = [":go_default_library"],
+    deps = ["@com_github_stretchr_testify//require:go_default_library"],
 )
