Make the filesystem API type safe
Instead of having an OpenFile() function that returns a single interface
for all file handles, create dedicated functions for readable, writable,
appendable and read-writable descriptors.

This not only prevents foot-shooting. It is also intended to make it
easier to make custom implementations of Directory without worrying
about POSIX semantics too much.

Files opened for reading now only support random access. This makes it
safe to access them in parallel. This allows us to implement PutFile()
in such a way that we don't need to seek.

--- a/pkg/filesystem/BUILD.bazel
+++ b/pkg/filesystem/BUILD.bazel
@@ -7,6 +7,8 @@ go_library(
         "file.go",
         "file_info.go",
         "local_directory.go",
+        "local_directory_darwin.go",
+        "local_directory_linux.go",
     ],
     importpath = "github.com/buildbarn/bb-storage/pkg/filesystem",
     visibility = ["//visibility:public"],
