--- a/pkg/util/BUILD.bazel
+++ b/pkg/util/BUILD.bazel
@@ -7,10 +7,12 @@ go_library(
         "digest.go",
         "jsonnet.go",
         "status.go",
+        "tls.go",
     ],
     importpath = "github.com/buildbarn/bb-storage/pkg/util",
     visibility = ["//visibility:public"],
     deps = [
+        "//pkg/proto/configuration/tls:go_default_library",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
         "@com_github_golang_protobuf//jsonpb:go_default_library_gen",
         "@com_github_golang_protobuf//proto:go_default_library",
