Add a unified API for creating gRPC clients and servers
Introduce a common Protobuf message for configuring gRPC clients and
servers. Servers can listen on multipel TCP and UNIX socket addresses.
They may use TLS with optional client certificate authentication.

The goal is that we're going to use these functions uniformally
throughout the Buildbarn codebase, so that all of our components have
the same set of features when it comes to using gRPC.

--- a/internal/mock/BUILD.bazel
+++ b/internal/mock/BUILD.bazel
@@ -23,6 +23,25 @@ gomock(
 )
 
 gomock(
+    name = "clock",
+    out = "clock.go",
+    interfaces = [
+        "Clock",
+        "Timer",
+    ],
+    library = "//pkg/clock:go_default_library",
+    package = "mock",
+)
+
+gomock(
+    name = "grpc",
+    out = "grpc.go",
+    interfaces = ["Authenticator"],
+    library = "//pkg/grpc:go_default_library",
+    package = "mock",
+)
+
+gomock(
     name = "remoteexecution",
     out = "remoteexecution.go",
     interfaces = [
@@ -38,12 +57,15 @@ go_library(
     srcs = [
         ":blobstore.go",
         ":builder.go",
+        ":clock.go",
+        ":grpc.go",
         ":remoteexecution.go",
     ],
     importpath = "github.com/buildbarn/bb-storage/internal/mock",
     visibility = ["//:__subpackages__"],
     deps = [
         "//pkg/builder:go_default_library",
+        "//pkg/clock:go_default_library",
         "//pkg/util:go_default_library",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
         "@com_github_golang_mock//gomock:go_default_library",
