--- a/cmd/bb_storage/BUILD.bazel
+++ b/cmd/bb_storage/BUILD.bazel
@@ -13,12 +13,11 @@ go_library(
         "//pkg/builder:go_default_library",
         "//pkg/cas:go_default_library",
         "//pkg/configuration:go_default_library",
+        "//pkg/grpc:go_default_library",
         "//pkg/opencensus:go_default_library",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
-        "@com_github_grpc_ecosystem_go_grpc_prometheus//:go_default_library",
         "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
         "@go_googleapis//google/bytestream:bytestream_go_proto",
-        "@io_opencensus_go//plugin/ocgrpc:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_google_grpc//codes:go_default_library",
         "@org_golang_google_grpc//status:go_default_library",
