--- a/pkg/blobstore/configuration/BUILD.bazel
+++ b/pkg/blobstore/configuration/BUILD.bazel
@@ -10,6 +10,7 @@ go_library(
         "//pkg/blobstore/circular:go_default_library",
         "//pkg/blobstore/sharding:go_default_library",
         "//pkg/filesystem:go_default_library",
+        "//pkg/grpc:go_default_library",
         "//pkg/proto/configuration/blobstore:go_default_library",
         "//pkg/util:go_default_library",
         "@com_github_aws_aws_sdk_go//aws:go_default_library",
@@ -17,7 +18,6 @@ go_library(
         "@com_github_aws_aws_sdk_go//aws/session:go_default_library",
         "@com_github_azure_azure_storage_blob_go//azblob:go_default_library",
         "@com_github_go_redis_redis//:go_default_library",
-        "@com_github_grpc_ecosystem_go_grpc_prometheus//:go_default_library",
         "@com_google_cloud_go//storage:go_default_library",
         "@dev_gocloud//blob:go_default_library",
         "@dev_gocloud//blob/azureblob:go_default_library",
@@ -26,7 +26,6 @@ go_library(
         "@dev_gocloud//blob/memblob:go_default_library",
         "@dev_gocloud//blob/s3blob:go_default_library",
         "@dev_gocloud//gcp:go_default_library",
-        "@org_golang_google_grpc//:go_default_library",
         "@org_golang_google_grpc//codes:go_default_library",
         "@org_golang_google_grpc//status:go_default_library",
         "@org_golang_x_oauth2//google:go_default_library",
