--- a/pkg/proto/configuration/blobstore/BUILD.bazel
+++ b/pkg/proto/configuration/blobstore/BUILD.bazel
@@ -6,6 +6,7 @@ proto_library(
     srcs = ["blobstore.proto"],
     visibility = ["//visibility:public"],
     deps = [
+        "//pkg/proto/configuration/grpc:grpc_proto",
         "//pkg/proto/configuration/tls:tls_proto",
         "@go_googleapis//google/rpc:status_proto",
     ],
@@ -17,6 +18,7 @@ go_proto_library(
     proto = ":blobstore_proto",
     visibility = ["//visibility:public"],
     deps = [
+        "//pkg/proto/configuration/grpc:go_default_library",
         "//pkg/proto/configuration/tls:go_default_library",
         "@go_googleapis//google/rpc:status_go_proto",
     ],
