--- a/pkg/util/BUILD.bazel
+++ b/pkg/util/BUILD.bazel
@@ -8,6 +8,7 @@ go_library(
         "jsonnet.go",
         "status.go",
         "tls.go",
+        "uuid.go",
     ],
     importpath = "github.com/buildbarn/bb-storage/pkg/util",
     visibility = ["//visibility:public"],
@@ -19,6 +20,7 @@ go_library(
         "@com_github_google_go_jsonnet//:go_default_library",
         "@com_github_google_go_jsonnet//ast:go_default_library",
         "@com_github_google_go_jsonnet//astgen:go_default_library",
+        "@com_github_google_uuid//:go_default_library",
         "@org_golang_google_grpc//codes:go_default_library",
         "@org_golang_google_grpc//status:go_default_library",
     ],
