--- a/pkg/util/BUILD.bazel
+++ b/pkg/util/BUILD.bazel
@@ -5,6 +5,7 @@ go_library(
     srcs = [
         "buckets.go",
         "digest.go",
+        "http_handlers.go",
         "jsonnet.go",
         "status.go",
         "tls.go",
@@ -21,6 +22,8 @@ go_library(
         "@com_github_google_go_jsonnet//ast:go_default_library",
         "@com_github_google_go_jsonnet//astgen:go_default_library",
         "@com_github_google_uuid//:go_default_library",
+        "@com_github_gorilla_mux//:go_default_library",
+        "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
         "@org_golang_google_grpc//codes:go_default_library",
         "@org_golang_google_grpc//status:go_default_library",
     ],
