--- a/pkg/blobstore/BUILD.bazel
+++ b/pkg/blobstore/BUILD.bazel
@@ -10,7 +10,6 @@ go_library(
         "cloud_blob_access.go",
         "content_addressable_storage_blob_access.go",
         "error_blob_access.go",
-        "merkle_blob_access.go",
         "metrics_blob_access.go",
         "redis_blob_access.go",
         "remote_blob_access.go",
@@ -21,10 +20,10 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/blobstore/buffer:go_default_library",
+        "//pkg/clock:go_default_library",
         "//pkg/util:go_default_library",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
         "@com_github_go_redis_redis//:go_default_library",
-        "@com_github_golang_protobuf//proto:go_default_library",
         "@com_github_google_uuid//:go_default_library",
         "@com_github_prometheus_client_golang//prometheus:go_default_library",
         "@dev_gocloud//blob:go_default_library",
@@ -39,10 +38,11 @@ go_library(
 
 go_test(
     name = "go_default_test",
-    srcs = ["merkle_blob_access_test.go"],
+    srcs = ["redis_blob_access_test.go"],
     embed = [":go_default_library"],
     deps = [
         "//internal/mock:go_default_library",
+        "//pkg/blobstore/buffer:go_default_library",
         "//pkg/util:go_default_library",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
         "@com_github_golang_mock//gomock:go_default_library",
