--- a/pkg/blobstore/circular/BUILD.bazel
+++ b/pkg/blobstore/circular/BUILD.bazel
@@ -19,6 +19,7 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/blobstore:go_default_library",
+        "//pkg/blobstore/buffer:go_default_library",
         "//pkg/util:go_default_library",
         "@com_github_prometheus_client_golang//prometheus:go_default_library",
         "@io_opencensus_go//trace:go_default_library",
