--- a/pkg/cas/BUILD.bazel
+++ b/pkg/cas/BUILD.bazel
@@ -12,6 +12,7 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/blobstore:go_default_library",
+        "//pkg/blobstore/buffer:go_default_library",
         "//pkg/filesystem:go_default_library",
         "//pkg/proto/cas:go_default_library",
         "//pkg/util:go_default_library",
@@ -25,10 +26,14 @@ go_library(
 
 go_test(
     name = "go_default_test",
-    srcs = ["byte_stream_server_test.go"],
+    srcs = [
+        "blob_access_content_addressable_storage_test.go",
+        "byte_stream_server_test.go",
+    ],
     embed = [":go_default_library"],
     deps = [
         "//internal/mock:go_default_library",
+        "//pkg/blobstore/buffer:go_default_library",
         "//pkg/util:go_default_library",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
         "@com_github_golang_mock//gomock:go_default_library",
