Add a BlobAccess decorator for coherence between the CAS and AC
When using Builds without the Bytes, it is expected that a
GetActionResult() only returns valid results if all of the blobs
referenced by it are actually contained within the CAS. Furthermore, it
must ensure that those objects don't disappear at a later point during
the build.

This decorator wraps any access to the AC in such a way that it computes
the transitive closure of referenced CAS blobs. It then calls
FindMissingBlobs() on those, so that their timestamp may be bumped.

This decorator needs to be enabled within a layer within the storage
stack that has access to all of the data (so not on a single storage
shard). This would preferably be the lowest layer, so that latency is
kept to a minimum.

--- a/internal/mock/BUILD.bazel
+++ b/internal/mock/BUILD.bazel
@@ -46,6 +46,14 @@ gomock(
 )
 
 gomock(
+    name = "cas",
+    out = "cas.go",
+    interfaces = ["ContentAddressableStorage"],
+    library = "//pkg/cas:go_default_library",
+    package = "mock",
+)
+
+gomock(
     name = "clock",
     out = "clock.go",
     interfaces = [
@@ -101,6 +109,7 @@ go_library(
         ":blobstore.go",
         ":buffer.go",
         ":builder.go",
+        ":cas.go",
         ":clock.go",
         ":filesystem.go",
         ":grpc.go",
@@ -114,6 +123,7 @@ go_library(
         "//pkg/builder:go_default_library",
         "//pkg/clock:go_default_library",
         "//pkg/filesystem:go_default_library",
+        "//pkg/proto/cas:go_default_library",
         "//pkg/util:go_default_library",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
         "@com_github_go_redis_redis//:go_default_library",
