--- a/cmd/bb_storage/BUILD.bazel
+++ b/cmd/bb_storage/BUILD.bazel
@@ -9,6 +9,7 @@ go_library(
     visibility = ["//visibility:private"],
     deps = [
         "//pkg/ac:go_default_library",
+        "//pkg/blobstore/completenesschecking:go_default_library",
         "//pkg/blobstore/configuration:go_default_library",
         "//pkg/builder:go_default_library",
         "//pkg/cas:go_default_library",
