Add LocalBlobAccess: a backend for storing data on the local system
The CircularBlobAccess storage backend was a nice experiment, but it has
a couple of serious flaws:

- There is a data corruption that may occur when reading blobs that are
  about to be overwritten by new content.
- It implements a FIFO-like eviction scheme, which is completely
  incompatible with Builds without the Bytes.

This change introduces LocalBlobAccess, a new storage backend that
attempts to fix this. The first problem is solved by storing data in a
series of files (blocks), instead of using a single file. Instead of
overwriting data, blocks are replaced by brand new copies.

This on its own would still cause storage to be FIFO. To solve that,
additional logic is added that causes data to be copied from older
blocks to newer blocks upon access. We don't want to do this too
frequently, because that would make accessing storage expensive. To
solve that, a threshold is used to determine how far an object has to be
within storage for it to be eligible to refreshes.

Right now this backend only supports in-memory storage. We should work
towards extending this to support disk-backed storage. This would allow
us to kick out the circular storage backend.

--- a/internal/mock/BUILD.bazel
+++ b/internal/mock/BUILD.bazel
@@ -23,6 +23,19 @@ gomock(
 )
 
 gomock(
+    name = "blobstore_local",
+    out = "blobstore_local.go",
+    interfaces = [
+        "Block",
+        "BlockAllocator",
+        "DigestLocationMap",
+        "LocationRecordArray",
+    ],
+    library = "//pkg/blobstore/local:go_default_library",
+    package = "mock",
+)
+
+gomock(
     name = "buffer",
     out = "buffer.go",
     interfaces = [
@@ -107,6 +120,7 @@ go_library(
     srcs = [
         ":aliases.go",
         ":blobstore.go",
+        ":blobstore_local.go",
         ":buffer.go",
         ":builder.go",
         ":cas.go",
@@ -120,6 +134,7 @@ go_library(
     visibility = ["//:__subpackages__"],
     deps = [
         "//pkg/blobstore/buffer:go_default_library",
+        "//pkg/blobstore/local:go_default_library",
         "//pkg/builder:go_default_library",
         "//pkg/clock:go_default_library",
         "//pkg/filesystem:go_default_library",
