Add a mirrored storage backend
This class effectively implements RAID 1 for storage servers. It
provides a decorator for BlobAccess that replicates data lazily when
inconsistencies are detected.

- Put() calls go to both backends.
- Get() calls will access backends in a round-robin fashion. When
  observing NotFound errors, a fallback to the secondary backend is
  performed. If that were to return success, a synchronization takes
  place.
- FindMissing() is called against both backends. The intersection is
  returned and blobs are synchronized in both directions where
  necessary.

These semantics should be sufficient to support Builds without the
Bytes. It does require that both servers in the pair remain accessible,
but it is perfectly fine to replace a dead instance by an empty
replacement.

--- a/pkg/blobstore/BUILD.bazel
+++ b/pkg/blobstore/BUILD.bazel
@@ -11,6 +11,7 @@ go_library(
         "content_addressable_storage_blob_access.go",
         "error_blob_access.go",
         "metrics_blob_access.go",
+        "mirrored_blob_access.go",
         "redis_blob_access.go",
         "remote_blob_access.go",
         "size_distinguishing_blob_access.go",
@@ -38,7 +39,10 @@ go_library(
 
 go_test(
     name = "go_default_test",
-    srcs = ["redis_blob_access_test.go"],
+    srcs = [
+        "mirrored_blob_access_test.go",
+        "redis_blob_access_test.go",
+    ],
     embed = [":go_default_library"],
     deps = [
         "//internal/mock:go_default_library",
