--- a/pkg/blobstore/BUILD.bazel
+++ b/pkg/blobstore/BUILD.bazel
@@ -12,6 +12,7 @@ go_library(
         "error_blob_access.go",
         "metrics_blob_access.go",
         "mirrored_blob_access.go",
+        "read_caching_blob_access.go",
         "redis_blob_access.go",
         "remote_blob_access.go",
         "size_distinguishing_blob_access.go",
@@ -41,6 +42,7 @@ go_test(
     name = "go_default_test",
     srcs = [
         "mirrored_blob_access_test.go",
+        "read_caching_blob_access_test.go",
         "redis_blob_access_test.go",
     ],
     embed = [":go_default_library"],
