Don't announce UpdateEnabled == true for non-writable AC instance names
Buildbarn would erroneously announce that the AC is writable, even for
instance names for which this isn't explicitly enabled in the
configuration. This might cause Bazel to call PutActionResult(), even
though it is not permitted to do this.

Turn the default of UpdateEnabled to false. Add a decorator that
explicitly flips this to true for instance names for which this is
permitted in the configuration.

--- a/pkg/builder/BUILD.bazel
+++ b/pkg/builder/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
         "demultiplexing_build_queue.go",
         "forwarding_build_queue.go",
         "non_executable_build_queue.go",
+        "updatable_action_cache_build_queue.go",
     ],
     importpath = "github.com/buildbarn/bb-storage/pkg/builder",
     visibility = ["//visibility:public"],
@@ -14,6 +15,7 @@ go_library(
         "//pkg/util:go_default_library",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
         "@com_github_bazelbuild_remote_apis//build/bazel/semver:go_default_library",
+        "@com_github_golang_protobuf//proto:go_default_library",
         "@go_googleapis//google/longrunning:longrunning_go_proto",
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_google_grpc//codes:go_default_library",
