Add a 'deny' gRPC authenticator
This makes it possible to fully disable a gRPC service, while keeping it
running. This may sometimes be preferred over turning off the gRPC
service entirely, as that may cause health checks to fail, users to
receive non-descriptive error messages, etc.

--- a/pkg/grpc/BUILD.bazel
+++ b/pkg/grpc/BUILD.bazel
@@ -6,6 +6,7 @@ go_library(
         "allow_authenticator.go",
         "any_authenticator.go",
         "authenticator.go",
+        "deny_authenticator.go",
         "grpc.go",
         "tls_client_certificate_authenticator.go",
     ],
@@ -32,6 +33,7 @@ go_test(
     srcs = [
         "allow_authenticator_test.go",
         "any_authenticator_test.go",
+        "deny_authenticator_test.go",
         "tls_client_certificate_authenticator_test.go",
     ],
     embed = [":go_default_library"],
