Switch to a new digest handling API
The old Digest type was placed in pkg/util. Let's move it into
pkg/digest to make it easier to add more data types that are related to
digests. There are some API changes compared to the old version:

- There is now a dedicated digest.Set type. This type guarantees that
  elements are sorted, which means we can do efficient merging/splitting
  of sets. It also ensures deterministic behaviour.
- The NewDigest() function no longer relies on the REv2 data type. This
  makes it easier to call this function and also drops the explicit
  dependency on REv2 in many places.
- VSO hashing support has been removed. The BuildXL authors have
  expressed that this was only there as a migration aid for migrating to
  SHA-256. If we ever want to implement object decomposition, we should
  also look at more flexible algorithms such as BLAKE3.

--- a/pkg/cas/BUILD.bazel
+++ b/pkg/cas/BUILD.bazel
@@ -13,9 +13,9 @@ go_library(
     deps = [
         "//pkg/blobstore:go_default_library",
         "//pkg/blobstore/buffer:go_default_library",
+        "//pkg/digest:go_default_library",
         "//pkg/filesystem:go_default_library",
         "//pkg/proto/cas:go_default_library",
-        "//pkg/util:go_default_library",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
         "@com_github_golang_protobuf//proto:go_default_library",
         "@go_googleapis//google/bytestream:bytestream_go_proto",
@@ -34,8 +34,7 @@ go_test(
     deps = [
         "//internal/mock:go_default_library",
         "//pkg/blobstore/buffer:go_default_library",
-        "//pkg/util:go_default_library",
-        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
+        "//pkg/digest:go_default_library",
         "@com_github_golang_mock//gomock:go_default_library",
         "@com_github_stretchr_testify//require:go_default_library",
         "@go_googleapis//google/bytestream:bytestream_go_proto",
