--- a/internal/mock/BUILD.bazel
+++ b/internal/mock/BUILD.bazel
@@ -137,9 +137,9 @@ go_library(
         "//pkg/blobstore/local:go_default_library",
         "//pkg/builder:go_default_library",
         "//pkg/clock:go_default_library",
+        "//pkg/digest:go_default_library",
         "//pkg/filesystem:go_default_library",
         "//pkg/proto/cas:go_default_library",
-        "//pkg/util:go_default_library",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
         "@com_github_go_redis_redis//:go_default_library",
         "@com_github_golang_mock//gomock:go_default_library",
