--- a/pkg/ac/BUILD.bazel
+++ b/pkg/ac/BUILD.bazel
@@ -8,7 +8,7 @@ go_library(
     deps = [
         "//pkg/blobstore:go_default_library",
         "//pkg/blobstore/buffer:go_default_library",
-        "//pkg/util:go_default_library",
+        "//pkg/digest:go_default_library",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
         "@org_golang_google_grpc//codes:go_default_library",
         "@org_golang_google_grpc//status:go_default_library",
