--- a/pkg/blobstore/buffer/BUILD.bazel
+++ b/pkg/blobstore/buffer/BUILD.bazel
@@ -32,6 +32,7 @@ go_library(
     importpath = "github.com/buildbarn/bb-storage/pkg/blobstore/buffer",
     visibility = ["//visibility:public"],
     deps = [
+        "//pkg/digest:go_default_library",
         "//pkg/util:go_default_library",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
         "@com_github_golang_protobuf//proto:go_default_library",
@@ -58,7 +59,7 @@ go_test(
     embed = [":go_default_library"],
     deps = [
         "//internal/mock:go_default_library",
-        "//pkg/util:go_default_library",
+        "//pkg/digest:go_default_library",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
         "@com_github_golang_mock//gomock:go_default_library",
         "@com_github_golang_protobuf//proto:go_default_library",
