--- a/pkg/blobstore/sharding/BUILD.bazel
+++ b/pkg/blobstore/sharding/BUILD.bazel
@@ -12,7 +12,7 @@ go_library(
     deps = [
         "//pkg/blobstore:go_default_library",
         "//pkg/blobstore/buffer:go_default_library",
-        "//pkg/util:go_default_library",
+        "//pkg/digest:go_default_library",
         "@com_github_lazybeaver_xorshift//:go_default_library",
     ],
 )
