--- a/pkg/blobstore/BUILD.bazel
+++ b/pkg/blobstore/BUILD.bazel
@@ -10,6 +10,7 @@ go_library(
         "cloud_blob_access.go",
         "content_addressable_storage_blob_access.go",
         "error_blob_access.go",
+        "existence_caching_blob_access.go",
         "metrics_blob_access.go",
         "mirrored_blob_access.go",
         "read_caching_blob_access.go",
@@ -42,6 +43,7 @@ go_library(
 go_test(
     name = "go_default_test",
     srcs = [
+        "existence_caching_blob_access_test.go",
         "mirrored_blob_access_test.go",
         "read_caching_blob_access_test.go",
         "redis_blob_access_test.go",
@@ -51,8 +53,7 @@ go_test(
         "//internal/mock:go_default_library",
         "//pkg/blobstore/buffer:go_default_library",
         "//pkg/digest:go_default_library",
-        "//pkg/util:go_default_library",
-        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
+        "//pkg/eviction:go_default_library",
         "@com_github_golang_mock//gomock:go_default_library",
         "@com_github_stretchr_testify//require:go_default_library",
         "@org_golang_google_grpc//codes:go_default_library",
